(fix): boost icon on narrower screens cut off

--- a/src/app/modules/newsfeed/activity/toolbar/toolbar.component.scss
+++ b/src/app/modules/newsfeed/activity/toolbar/toolbar.component.scss
@@ -84,6 +84,7 @@ m-activity__toolbar {
     width: auto;
     height: auto;
     min-width: unset;
+    border-radius: 0;
 
     font-weight: 500;
     padding: 0;
